# rust-webui

./: Cargo.toml
examples/: all_elements.html  all_elements.rs  basic.html  basic.rs  scoped.html  scoped.rs
src/: lib.rs
static/: webui.css  webui.js
