[package]
name = "webui"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = { version = "0.3", features = ["sink"] }

[dev-dependencies]
headless_chrome = "1.0"
reqwest = "0.12"
